Enabled addition of data thru fixtures. Fixtures now supports specification of primary key. Changed primaryKey behavior in SqlitePersistentObjects: changed int to NSNumber

--- a/Db/Fixtures/ExpenseReport.yml
+++ b/Db/Fixtures/ExpenseReport.yml
@@ -1,14 +1,14 @@
 [
 	{
-		"pk":"1",
+		"pk":1,
 		"submittedOn":"2009-04-24 21:33:39.0650",
-		"reportId":"1",
+		"reportId":1,
 		"createdOn":"2009-04-24 21:33:39.0650"
 	},
 	{
-		"pk":"2",
+		"pk":2,
 		"submittedOn":"2009-05-24 21:33:39.0650",
-		"reportId":"2",
+		"reportId":2,
 		"createdOn":"2009-05-24 21:33:39.0650"
 	}
 ]
