--- a/Db/Fixtures/Vendor.yml
+++ b/Db/Fixtures/Vendor.yml
@@ -1,27 +1,96 @@
 [
 	{
-		"pk":1,
+		"pk":21,
 		"name":"Cliqbook",
 		"expenseType":"ExpenseType-2"
 	},
 	{
-		"pk":2,
+		"pk":22,
 		"name":"United",
 		"expenseType":"ExpenseType-2"
 	},
 	{
-		"pk":3,
+		"pk":23,
 		"name":"American",
 		"expenseType":"ExpenseType-2"
 	},
 	{
-		"pk":4,
+		"pk":24,
 		"name":"Southwest",
 		"expenseType":"ExpenseType-2"
 	},
 	{
-		"pk":5,
+		"pk":25,
 		"name":"Delta",
 		"expenseType":"ExpenseType-2"
+	},
+	{
+		"pk":41,
+		"name":"Cliqbook",
+		"expenseType":"ExpenseType-4"
+	},
+	{
+		"pk":42,
+		"name":"Marriott",
+		"expenseType":"ExpenseType-4"
+	},
+	{
+		"pk":43,
+		"name":"Hilton",
+		"expenseType":"ExpenseType-4"
+	},
+	{
+		"pk":44,
+		"name":"Starwood",
+		"expenseType":"ExpenseType-4"
+	},
+	{
+		"pk":45,
+		"name":"Hyatt",
+		"expenseType":"ExpenseType-4"
+	},
+	{
+		"pk":51,
+		"name":"Cliqbook",
+		"expenseType":"ExpenseType-5"
+	},
+	{
+		"pk":52,
+		"name":"Avis",
+		"expenseType":"ExpenseType-5"
+	},
+	{
+		"pk":53,
+		"name":"Hertz",
+		"expenseType":"ExpenseType-5"
+	},
+	{
+		"pk":54,
+		"name":"Enterprise",
+		"expenseType":"ExpenseType-5"
+	},
+	{
+		"pk":55,
+		"name":"Alamo",
+		"expenseType":"ExpenseType-5"
+	},
+	{
+		"pk":56,
+		"name":"Thrifty",
+		"expenseType":"ExpenseType-5"
 	}
+	
 ]
+
+
+
+
+
+
+
+
+
+
+
+
+
